[package]
name = "iced_hello_world"
version = "0.1.0"
authors = ["Hunter Trujillo <cryptoquick@pm.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.2.0", features = ["debug"] }
iced_native = "0.3"
env_logger = "0.8"

[build]
incremental = true
