[package]
name = "iced_hello_world"
version = "0.1.0"
authors = ["Hunter Trujillo <cryptoquick@pm.me>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.4.2", features = ["debug"] }
iced_native = "0.5.0"
env_logger = "0.9"

[build]
incremental = true
